--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="{{ request.locale.iso_code }}"
   {%- if text_direction == 'rtl' %} dir="rtl"{% endif -%}
->
+>test 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
