--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,8 +2,9 @@
 <!doctype html>
 <html class="no-js" lang="{{ request.locale.iso_code }}"
   {%- if text_direction == 'rtl' %} dir="rtl"{% endif -%}
->test 
+>
   <head>
+    {%  render 'head-content' %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -37,7 +38,13 @@
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     <script crossorigin="anonymous" src="{{ 'modules-basis.js' | asset_url }}" defer="defer"></script>
 
-    {{ content_for_header }}
+    {%- if request.design_mode or template contains 'cart' or template contains 'checkout' -%}
+      {{ content_for_header }}
+    {%- else -%}
+      {% capture content_for_header2 %}{{ content_for_header }}{% endcapture %}
+      {{ content_for_header2 | replace: ' async="async" ', ' type="load" ' | replace: ' defer="defer" ', ' type="load" ' | replace: " src=", " d-src="| replace: "DOMContentLoaded", "xDOMContentLoaded" | replace: "window.addEventListener('load', asyncLoad, false);", "window.addEventListener('xDOMContentLoaded', asyncLoad, false);" | replace: "addEventListener('load', prefetchAssets);", "addEventListener('xDOMContentLoaded', prefetchAssets);" | replace: "type='text/javascript' async=''", "type='load' " | replace: 'type="module" d-', 'dxt="module" type="load" d-' | replace: 'async dxt="module" type="load"', 'dxt="module"' | replace: '<script type="module">', '<script dxt="module" type="load">'| replace: "type='text/javascript' defer='defer' d-src", "type='load' d-src" | replace: '<script>' , '<script type="load">' | replace: 'type="load" d-src="https://shop.app/checkouts/internal/preloads.js', 'type="lload" d-src="https://shop.app/checkouts/internal/preloads.js' | replace: '<script type="load">var Shopify', '<script>var Shopify' }}
+      <script>var trekkie=[];trekkie.integrations=!0;window.BOOMR={},window.BOOMR.version=true;</script>
+    {%- endif -%}
 
     {%- liquid
       render 'css-variables'
@@ -74,7 +81,8 @@
     {%- render 'js-variables' -%}
 
       <script type="text/javascript" id="loop-subscription-script" src="{{ 'loop-widget.js' | asset_url }}"></script>
-    
+    {%  render 'app-block' %}
+    {%  render 'custom-css' %}
   </head>
 
 
@@ -139,5 +147,7 @@
     {%- if linklists.gift-wrapping.links != blank and linklists.gift-wrapping.links.first.type == 'product_link' -%}
       <script src="{{ 'gift-wrapping.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+    {%  render 'footer-app-block' %}
+    {%  render 'foot-content' %}
   </body>
 </html>
