--- a/snippets/custom-css.liquid
+++ b/snippets/custom-css.liquid
@@ -1,5 +1,5 @@
 <style>
-html:not(.xh) .slideshow__right .slideshow__slide:nth-child(n+2) {
+html:not(.xh) .slideshow__right .slideshow__slide:nth-child(n+2) img{
     opacity: 0;
 }    
 </style>
