--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,7 +46,7 @@
       {{ content_for_header2 | replace: ' async="async" ', ' type="load" ' | replace: ' defer="defer" ', ' type="load" ' | replace: " src=", " d-src="| replace: "DOMContentLoaded", "xDOMContentLoaded" | replace: "window.addEventListener('load', asyncLoad, false);", "window.addEventListener('xDOMContentLoaded', asyncLoad, false);" | replace: "addEventListener('load', prefetchAssets);", "addEventListener('xDOMContentLoaded', prefetchAssets);" | replace: "type='text/javascript' async=''", "type='load' " | replace: 'type="module" d-', 'dxt="module" type="load" d-' | replace: 'async dxt="module" type="load"', 'dxt="module"' | replace: '<script type="module">', '<script dxt="module" type="load">'| replace: "type='text/javascript' defer='defer' d-src", "type='load' d-src" | replace: '<script>' , '<script type="load">' | replace: 'type="load" d-src="https://shop.app/checkouts/internal/preloads.js', 'type="lload" d-src="https://shop.app/checkouts/internal/preloads.js' | replace: '<script type="load">var Shopify', '<script>var Shopify' }}
       <script>var trekkie=[];trekkie.integrations=!0;window.BOOMR={},window.BOOMR.version=true;</script>
     {%- endif -%}
-    
+
     {% if template contains "index" %}
         {% render "index-css" %}
     {% elsif template contains "collection" %}
@@ -62,7 +62,7 @@
     {% endif %}
     {%- liquid
       render 'css-variables'
-      echo 'base.css' | asset_url | stylesheet_tag: preload: true
+      echo 'base.css' | asset_url | stylesheet_tag
       
       if text_direction == 'rtl'
         echo 'rtl.css' | asset_url | stylesheet_tag
