--- a/snippets/custom-css.liquid
+++ b/snippets/custom-css.liquid
@@ -2,4 +2,9 @@
 html:not(.xh) .slideshow__right .slideshow__slide:nth-child(n+2) img{
     opacity: 0;
 }    
+html:not(.scld) .transition-cover {
+    display: none !important;
+    opacity: 0 !important;
+    visibility: hidden !important;
+}
 </style>
