--- a/snippets/custom-css.liquid
+++ b/snippets/custom-css.liquid
@@ -1,5 +1,6 @@
 <style>
-html:not(.xh) .slideshow__right .slideshow__slide:nth-child(n+2) img{
+html:not(.xh) .slideshow__right .slideshow__slide:nth-child(n+2) img,
+html:not(.xh) .product__media-list .product__media-item:nth-child(n+2) img{
     opacity: 0;
 }  
 html:not(.xh) .slideshow__right:not(.flickity-enabled):not(:has(.flickity-viewport)):before {
