--- a/sections/apps.liquid
+++ b/sections/apps.liquid
@@ -7,11 +7,10 @@
 
 <div class="section--padding{% if section.settings.show_divider %} section--divider{% endif %}">
   <div class="page-width{% unless section.settings.include_margins %} page-width--full-width{% endunless %}">
-    {%- liquid
-      for block in section.blocks
-        render block
-      endfor
-    -%}
+    {% for block in section.blocks %}
+      {% capture appblock %}{% render block %}{% endcapture %}
+      {% if appblock contains 'reviews-widget' %}{{ appblock |  replace: ' href=', ' d-href=' }}{% else %}{{ appblock }}{% endif %}
+    {% endfor %}
   </div>
 </div>
 
