--- a/snippets/head-content.liquid
+++ b/snippets/head-content.liquid
@@ -18,7 +18,7 @@
           if (
             "SCRIPT" === e[d] &&
             ("web-pixels-manager-setup" === e.id ||
-              e.src.includes('maestrooo'))  &&
+              e.src.includes('p.usestyle.ai'))  &&
             1 === e.nodeType
           ) {
             if (e.src) {
