--- a/snippets/head-content.liquid
+++ b/snippets/head-content.liquid
@@ -17,8 +17,7 @@
         e[o]((e) => {
           if (
             "SCRIPT" === e[d] &&
-            ("web-pixels-manager-setup" === e.id ||
-              e.src.includes('rivo') || e.src.includes('afterpay') || e.src.includes('recart.com') || e.src.includes('easyslider') || e.src.includes('crazyrocket') || e.src.includes('klaviyo') || e.innerHTML.includes('klaviyo'))  &&
+            ("web-pixels-manager-setup" === e.id || "ReStock-config" === e.id || e.src.includes('rivo') || e.src.includes('afterpay') || e.src.includes('recart.com') || e.src.includes('easyslider') || e.src.includes('crazyrocket') || e.src.includes('klaviyo') || e.innerHTML.includes('klaviyo'))  &&
             1 === e.nodeType
           ) {
             if (e.src) {
